@@ -16,6 +16,7 @@ Agregada emulación de Datel Lightwriter
 Agregada emulación de Spectrum Doodler Lightpen
 Agregada mirilla de lightgun
 Agregada vista previa de snapshots ZSF de máquinas QL, ZX80 y ZX81
+Permitir ver GO SUB stack de ZX81
 
 Mejorado Snapshots en RAM:
 - Navegar de manera visual por todos los snapshots en RAM, como en una "Máquina del Tiempo"
